Revision history for Linux-Statm-Tiny

{{$NEXT}}
  [Documentation]
  - Updated Changes to reference the CVE for a security issue.

  - Update the copyright year.

  - Reorganised POD.

0.0701    2025-03-31 14:51:49+01:00 Europe/London
  [Security]
  - Rebuilt with Mite 0.013000 to fix CVE-2025-3051. (See also CVE-2025-30672.)

  [Documentation]
  - Added a security policy.

0.0700    2022-07-26 17:27:32+01:00 Europe/London
  [Enhancements]
  - Ported over from Moo to Mite (tobyink), which removes the
    non-core dependencies.

  [Other]
  - Core prequisites are explicitly listed.

  - Removed import of ceil function into the namespace.

  [Tests]
  - Removed file portability tests. (Unnecessay, since this is for Linux.)

  - Removed clean namespace tests.

0.0603    2022-04-04 16:41:03+01:00 Europe/London
  [Documentation]
  - Bumped copyright year.

0.0602    2022-04-04 16:33:52+01:00 Europe/London
  [Bug Fixes]
  - Use POSIX to get the page size, GH#12 (raz)

0.0601    2019-02-17 18:29:31+00:00 Europe/London
  [Documentation]
  - Fixed typo in POD markup (manwar).

  - Bumped copyright year.

  [Toolchain]
  - Updated MANIFEST.SKIP.

0.0600    2018-10-27 23:37:11+01:00 Europe/London
  [Bug Fixes]
  - Fix pid detection in forks (aidy)

  - Explicitly set minimum version to v5.10.1.

  [Tests]
  - Updated namespace tests and added other POD tests (ether)

  - Added more tests.

  [Documentation]
  - Change README to markdown format.

  - Stop using Pod::Readme to create README.

  - Use Pod::Weaver to build documentation.

  [Other Changes]
  - Remove .travis.yml from git repo.

  - Updated dist.ini to make releases easier.

  - Define the module version normally, which works better with buildtools.

0.0505    2015-06-23 18:05:22+01:00 Europe/London
  [Other Changes]
  - Only run tests on Linux machines

  - Added Travis-CI configuration to repo

0.0504    2015-05-25 14:35:16+01:00 Europe/London
  [Other Changes]